EPMRPP-121363 fix tms attachments