@@ -3,7 +3,6 @@ package com.epam.reportportal.base.core.tms.service;
 import com.epam.reportportal.base.core.tms.dto.TmsTestCaseExecutionCommentRQ;
 import com.epam.reportportal.base.infrastructure.persistence.dao.tms.TmsTestCaseExecutionCommentAttachmentRepository;
 import com.epam.reportportal.base.infrastructure.persistence.entity.tms.TmsTestCaseExecutionComment;
-import com.epam.reportportal.base.infrastructure.persistence.entity.tms.TmsTestCaseExecutionCommentAttachment;
 import com.epam.reportportal.base.infrastructure.rules.exception.ErrorType;
 import com.epam.reportportal.base.infrastructure.rules.exception.ReportPortalException;
 import java.util.HashSet;
@@ -25,7 +24,8 @@ public class TmsTestCaseExecutionCommentAttachmentServiceImpl implements
 
   @Override
   @Transactional
-  public void createAttachments(TmsTestCaseExecutionComment tmsTestCaseExecutionComment,
+  public void createAttachments(Long projectId,
+      TmsTestCaseExecutionComment tmsTestCaseExecutionComment,
       TmsTestCaseExecutionCommentRQ commentRQ) {
     log.debug("Creating attachments for execution tmsTestCaseExecutionComment: {}",
         tmsTestCaseExecutionComment.getId());
@@ -40,10 +40,10 @@ public class TmsTestCaseExecutionCommentAttachmentServiceImpl implements
         .getAttachments()
         .stream()
         .map(attachment -> Long.valueOf(attachment.getId()))
-        .collect(Collectors.toList());
+        .toList();
 
     // Validate and get attachments
-    var attachments = tmsAttachmentService.getTmsAttachmentsByIds(attachmentIds);
+    var attachments = tmsAttachmentService.getTmsAttachmentsByIds(projectId, attachmentIds);
 
     if (CollectionUtils.isNotEmpty(attachments)) {
       tmsTestCaseExecutionComment.setAttachments(new HashSet<>());
@@ -69,7 +69,7 @@ public class TmsTestCaseExecutionCommentAttachmentServiceImpl implements
 
   @Override
   @Transactional
-  public void updateAttachments(TmsTestCaseExecutionComment existingComment,
+  public void updateAttachments(Long projectId, TmsTestCaseExecutionComment existingComment,
       TmsTestCaseExecutionCommentRQ commentRQ) {
     log.debug("Updating attachments for execution comment: {}", existingComment.getId());
 
@@ -83,7 +83,7 @@ public class TmsTestCaseExecutionCommentAttachmentServiceImpl implements
     }
 
     // Create new relationships
-    createAttachments(existingComment, commentRQ);
+    createAttachments(projectId, existingComment, commentRQ);
   }
 
   @Override
